fix(product-service): fix availability logic, aggregation queries, and type mismatches
Switch availability checks from ProductStatus to stockQuantity, fix inventory value and
aggregation pipelines, align BigDecimal/Double types for MongoDB, and remove unused constants.